# evoliz-rebill

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
app/: auth.py  config.py  db.py  evoliz.py  main.py  models.py  service.py
app/templates/: base.html  history.html  index.html  settings.html
app/templates/partials/: result.html
