[project]
name = "evoliz-rebill"
version = "0.1.0"
description = "Outil de refacturation des achats Evoliz marqués billable"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
